<resources>
    <string name="app_name">Liverpool</string>
    <string name="price_text">$ %1$.2f</string>
    <string name="search_hint">Buscar…</string>
    <string name="select_hint">Seleccione…</string>
    <string name="no_results_text">No se encontraron resultados</string>
    <string name="order_text">Ordenar por:</string>
    <string name="text_dialog_alert">Alerta</string>
    <string name="btn_accept">Aceptar</string>
    <string name="load_more_text">Cargar más</string>
    <string name="lower_price_text">Menor precio</string>
    <string name="higher_price_text">Mayor precio</string>
</resources>